--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -225,8 +225,8 @@
                 <div class="d-flex pt-2 pb-1 align-items-center">
                     <div class="col-2 text-center text-truncate text-style-ro-18b">{{ student.study }}</div>
                     <div class="col-3 text-center text-style-ro-18b pe-4">{{ student.role_in_the_team }}</div>
-                    <div class="col-2 text-center text-style-ro-18b pe-4">{{ student.country }}</div>
-                    <div class="col-1 text-center text-style-ro-18b pe-4" style="color: #FD612C;">{{ student.age }}</div>
+                    <div class="col-2 text-center text-style-ro-18b">{{ student.country }}</div>
+                    <div class="col-1 text-center text-style-ro-18b" style="color: #FD612C;">{{ student.age }}</div>
                     <div class="col-2 text-center text-style-ro-18b pe-4" style="color: #FD612C;">
                         {{ student.experience }}
 {#                        <button class="" style="border: none; background-color: transparent;">#}
@@ -283,7 +283,7 @@
                             <div class="text-style-ro-18b mt-1" style="filter: blur(4px);">More info 2</div>
                         </div>
     
-                        <div class="col-5 pe-5 ms-1">
+                        <div class="col-6 pe-5 ms-1">
                             <div class="text-style-ro-18b" style="color: #FF6B2C;">EXPERIENCE</div>
                             <div class="mt-2">
                                 <ul class="text-style-ro-16 ps-3">
@@ -300,8 +300,8 @@
                             </div> -->
                         </div>
     
-                        <div class="col-3 ms-2">
-                            <div class="text-style-ro-18b ps-3" style="color: #FF6B2C;">PERSONALITY</div>
+                        <div class="col-2 ms-2">
+                            <!-- <div class="text-style-ro-18b ps-3" style="color: #FF6B2C;">PERSONALITY</div>
                             <div class="mt-2">
                                 <ul class="text-style-ro-16">
                                     <li>Quick Learner</li>
@@ -310,7 +310,7 @@
                                     <li>Team Player</li>
                                     <li>Motivated By Success</li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <!-- <div class="row">
                                 <div class="d-flex justify-content-between align-middle">
                                     <div class="text-style-qs-16" style="line-height: 28px;">FS ALPE ADRIA</div>
@@ -366,7 +366,7 @@
                                 <a class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
                             </div>
                         </div>
-                        <div class="col-3 ms-2">
+                        <div class="col-3 ms-5">
                             <div class="ps-4">
                                 <button data-student-id="{{ student.id }}" class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>
                             </div>
@@ -500,7 +500,7 @@
                         <div class="text-style-ro-18b mt-1" style="filter: blur(4px);">More info 2</div>
                     </div>
 
-                    <div class="col-lg-5 pe-5 ms-1">
+                    <div class="col-lg-6 pe-5 ms-1">
                         <div class="text-style-ro-18b" style="color: #FF6B2C;">EXPERIENCE</div>
                         <div class="mt-2">
                             <ul class="text-style-ro-16 ps-3">
@@ -517,8 +517,8 @@
                         </div> -->
                     </div>
 
-                    <div class="col-lg-3 ms-2">
-                        <div class="text-style-ro-18b ps-3" style="color: #FF6B2C;">PERSONALITY</div>
+                    <div class="col-lg-2 ms-2">
+                        <!-- <div class="text-style-ro-18b ps-3" style="color: #FF6B2C;">PERSONALITY</div>
                             <div class="mt-2">
                                 <ul class="text-style-ro-16">
                                     <li>Quick Learner</li>
@@ -527,7 +527,7 @@
                                     <li>Team Player</li>
                                     <li>Motivated By Success</li>
                                 </ul>
-                            </div>
+                            </div> -->
                         <!-- <div class="row">
                             <div class="d-flex justify-content-between align-middle">
                                 <div class="text-style-qs-16" style="line-height: 28px;">FS ALPE ADRIA</div>
@@ -582,7 +582,7 @@
                                 <a class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
                             </div>
                         </div>
-                        <div class="col-3 ms-2">
+                        <div class="col-3 ms-5">
                             <div class="ps-4">
                                 <button data-student-id="{{ student.id }}" class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>
                             </div>
