--- a/static/css/style.css
+++ b/static/css/style.css
@@ -500,7 +500,7 @@ input[id="cb1"] {
 } */
 
 .popover-body {
-    height: 300px;
+    /*height: 300px;*/
     overflow: scroll;
     overflow-x:hidden;
 }
