--- a/templates/commons/search.html
+++ b/templates/commons/search.html
@@ -6,7 +6,28 @@
 {% block title %}Django CRM - Search{% endblock %}
 {% block script %}
 
-    <script src="{% static 'search.js' %}"></script>
+    <script src="{% static 'search.js' %}">
+
+    function search() {
+        // Get the selected values from the dropdowns
+        var selectedPosition = document.getElementById("selected-position").innerText;
+        var selectedSpecialization = document.getElementById("selected-specialization").innerText;
+        var selectedCountry = document.getElementById("selected-country").innerText;
+
+        var selectedPosition = document.getElementById("selected-position").innerText;
+        console.log(selectedPosition);
+        var selectedSpecialization = document.getElementById("selected-specialization").innerText;
+        console.log(selectedSpecialization);
+        var selectedCountry = document.getElementById("selected-country").innerText;
+        console.log(selectedCountry);
+
+        // Create the URL with the selected values as parameters
+        var url = '/search/?position=' + encodeURIComponent(selectedPosition) + '&specialization=' + encodeURIComponent(selectedSpecialization) + '&country=' + encodeURIComponent(selectedCountry);
+
+        // Redirect to the generated URL
+        window.location.href = url;
+    }
+    </script>
 
     <!-- <script>
         document.addEventListener('DOMContentLoaded', function() {
@@ -66,7 +87,7 @@
                     </div>
                     <div class="search-dropdown dropdown mt-4 mx-5 py-2">
                         <button class="search-dropdown-button dropdown d-flex justify-content-between align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <span id="selected-experience" class="text-style-ro-16 dropdown-main-text px-2" style="color: #5E6B78;">E.g. Germany</span>
+                            <span id="selected-country" class="text-style-ro-16 dropdown-main-text px-2" style="color: #5E6B78;">E.g. Germany</span>
                             <i class="search-dropdown-icon fa-solid fa-chevron-down dropdown-icon px-2" style="font-size: 1.5vw; color: #FD612C;"></i>
                         </button> 
                         <ul class="search-dropdown-menu dropdown-menu ms-1 me-1 mt-1">
@@ -114,7 +135,7 @@
             </div> -->
             <div class="d-flex col-12 justify-content-end mt-5 px-5 mb-5 align-items-center">
                 <div class="col-2 text-center">
-                    <button class="orange-button text-style-ro-24b" style="font-weight: 400 !important; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">
+                    <button id="search" class="orange-button text-style-ro-24b" style="font-weight: 400 !important; box-shadow: 1px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07), 0px 3px 3px 1px rgba(0, 0, 0, 0.07);">
                         SEARCH
                     </button>
                 </div>
@@ -128,7 +149,7 @@
 
     </div>
 
-
+    {% if is_first == False %}
     <div class="light-pink-box mt-5 px-5 pb-4" style="box-shadow: none; margin-bottom: 50px;">
         <div class="row pt-4">
             <div class="d-flex mb-2">
@@ -363,7 +384,7 @@
                         <div class="col-4"></div>
                         <div class="col-5 ms-1">
                             <div>
-                                <a class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
+                                <a data-studentId="{{ student.id }}"  class="detailed-experience text-style-ro-16" style="color: #FF6B2C; font-weight: 700;">DETAILED EXPERIENCE AND COMPETENCES</a>
                             </div>
                         </div>
                         <div class="col-3 ms-5">
@@ -379,6 +400,7 @@
 
 
     </div>
+
 
     <!-- <nav aria-label="Page navigation example">
         <ul class="pagination">
@@ -472,6 +494,7 @@
 
         </ul>
       </nav>
+      {% endif %}
 
     
 </div>
@@ -584,7 +607,7 @@
                         </div>
                         <div class="col-3 ms-5">
                             <div class="ps-4">
-                                <button data-student-id="{{ student.id }}" class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>
+                                <button class="save-button orange-button text-style-ro-24b save-button" style="width: 60% !important; font-weight: 500; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25)">SAVE</button>
                             </div>
                         </div>
                     </div>
