--- a/static/css/style.css
+++ b/static/css/style.css
@@ -181,7 +181,7 @@ input[id="cb1"] {
 }
 
 .text-style-ro-18b {
-    font-size: 1.3vw;
+    font-size: 18px;
     font-family: 'Roboto';
     color: #100F0E;
     line-height: 24px;
