--- a/templates/commons/layout.html
+++ b/templates/commons/layout.html
@@ -45,7 +45,7 @@
         <header>
         <nav class="navbar navbar-dark navbar-expand-sm navbar-custom" style="height: 80px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);">
             <div class="container-fluid px-5">
-                <a class="navbar-brand text-style-ro-24b" href="{% url 'home' %}">SHERLOOK 3000</a>
+                <a class="navbar-brand text-style-ro-24b" href="{% url 'home' %}">SHERLOOK</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -123,7 +123,7 @@
                 </div>
                 {% else %}
                 <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                    <div class="text-style-ro-29b">SHERLOOK 3000</div>
+                    <div class="text-style-ro-29b">SHERLOOK</div>
                 </div>
                 {% endif %}
                 
