--- a/templates/commons/signup_layout.html
+++ b/templates/commons/signup_layout.html
@@ -45,7 +45,7 @@
         <nav class="navbar navbar-dark navbar-expand-sm navbar-custom" style="height: 80px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);">
             <div class="container-fluid px-5">
                 <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarSupportedContent">
-                    <div class="text-style-ro-29b">SHERLOOK 3000</div>
+                    <div class="text-style-ro-29b">SHERLOOK</div>
                 </div>
 
             </div>
